adjusting spacing in landing page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,9 @@
 #attribution {
     display: none;
 }
+#container {
+    margin-bottom: 3em !important;
+}
 .circle-image {
     border: 0.5rem solid #6c757d;
 }
